Project renamed to discord-logger-provider

--- a/discord-logger-provider-test/discord-logger-provider-test.csproj
+++ b/discord-logger-provider-test/discord-logger-provider-test.csproj
@@ -28,7 +28,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\logger-discord-provider\logger-discord-provider.csproj" />
+	  <ProjectReference Include="..\discord-logger-provider\discord-logger-provider.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
