--- a/discord-logger-provider/discord-logger-provider.csproj
+++ b/discord-logger-provider/discord-logger-provider.csproj
@@ -4,13 +4,13 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<RootNamespace>JNogueira.Discord.Logger</RootNamespace>
 		<AssemblyName>JNogueira.Discord.Logger</AssemblyName>
-		<PackageId>logger-discord-provider</PackageId>
+		<PackageId>discord-logger-provider</PackageId>
 		<Authors>Jorge Nogueira</Authors>
 		<Company></Company>
-		<Product>Logger Discord Provider</Product>
+		<Product>Discord .NET Logger Provider</Product>
 		<Description>A .NET Core Logger provider to send log messages to Discord.</Description>
-		<PackageProjectUrl>https://github.com/jlnpinheiro/logger-discord-provider</PackageProjectUrl>
-		<RepositoryUrl>https://github.com/jlnpinheiro/logger-discord-provider</RepositoryUrl>
+		<PackageProjectUrl>https://github.com/jlnpinheiro/discord-logger-provider</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/jlnpinheiro/discord-logger-discord-provider</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>ILogger Logging .NET Core log Discord</PackageTags>
 		<AssemblyVersion>$(PackageVersion)</AssemblyVersion>
